// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayRadio should render a checked and disabled radio 1`] = `
<div class="custom-control custom-radio">
  <label>
    <input checked="" disabled="disabled" class="custom-control-input" ref="input" type="radio" role="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render a checked radio 1`] = `
<div class="custom-control custom-radio">
  <label>
    <input checked="" class="custom-control-input" ref="input" type="radio" role="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render a disabled radio 1`] = `
<div class="custom-control custom-radio">
  <label>
    <input disabled="disabled" class="custom-control-input" ref="input" type="radio" role="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render a radio with classes 1`] = `
<div class="custom-control custom-radio my-custom-class">
  <label>
    <input class="custom-control-input" ref="input" type="radio" role="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render a radio with custom label content 1`] = `
<div class="custom-control custom-radio">
  <label>
    <input class="custom-control-input" ref="input" type="radio" role="radio">
    <span class="custom-control-indicator"></span>
    <div>
      <p>My Radio</p>
    </div>
  </label>
</div>
`;

exports[`ClayRadio should render a radio with hidden label 1`] = `
<div class="custom-control custom-radio">
  <label>
    <input class="custom-control-input" ref="input" type="radio" role="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description sr-only">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render a radio with id 1`] = `
<div class="custom-control custom-radio" id="myId">
  <label>
    <input class="custom-control-input" ref="input" type="radio" role="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render a radio with name 1`] = `
<div class="custom-control custom-radio">
  <label>
    <input class="custom-control-input" name="myradio" ref="input" type="radio" role="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render a radio with value 1`] = `
<div class="custom-control custom-radio">
  <label>
    <input class="custom-control-input" value="myradio" ref="input" type="radio" role="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render an inline radio 1`] = `
<div class="custom-control custom-radio custom-control-inline">
  <label>
    <input class="custom-control-input" ref="input" type="radio" role="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;

exports[`ClayRadio should render default markup 1`] = `
<div class="custom-control custom-radio">
  <label>
    <input class="custom-control-input" ref="input" type="radio" role="radio">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Radio</span>
  </label>
</div>
`;
